# src/asset/asset.controller.ts
@@ -1,9 +1,0 @@
-import { Controller, Get } from '@nestjs/common';
-
-@Controller('assets')
-export class AssetController {
-    @Get()
-    findAll() {
-        return { message: 'AssetController is working!' };
-    }
-} 
